--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # Created by https://www.toptal.com/developers/gitignore/api/visualstudiocode
 # Edit at https://www.toptal.com/developers/gitignore?templates=visualstudiocode
-
+dbconfig.php
 ### VisualStudioCode ###
 .vscode/*
 !.vscode/settings.json
@@ -9,6 +9,7 @@
 !.vscode/extensions.json
 !.vscode/*.code-snippets
 !.vscode/sftp.json
+!./dbconfig.php
 
 # Local History for Visual Studio Code
 .history/
